--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "crud",
   "version": "0.0.0",
+  "main": "electron.js",
   "scripts": {
+    "electron": "node_modules\\.bin\\electron.cmd .",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -10,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^19.2.17",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
@@ -17,15 +20,30 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fullcalendar/angular": "^6.1.20",
+    "@fullcalendar/daygrid": "^6.1.20",
+    "@fullcalendar/interaction": "^6.1.20",
+    "@fullcalendar/timegrid": "^6.1.20",
+    "bootstrap": "^5.3.8",
+    "file-saver": "^2.0.5",
+    "ngx-socket-io": "^4.8.1",
     "rxjs": "~7.8.0",
+    "serialport": "^13.0.0",
+    "sweetalert2": "^11.26.16",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.15",
     "@angular/cli": "^19.2.15",
     "@angular/compiler-cli": "^19.2.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
+    "electron": "^28.3.3",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
